# mkdocs-multirepo-plugin

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: check_version.yml  deploy.yml  test.yml
__tests__/: linter.sh  setup-bats.sh  setup-pip.sh  test-bats-ci.sh  test-ci.sh  test-unittest-ci.sh  test.bats  test.sh  tests.bats  unittests.sh
__tests__/fixtures/error-no-docs-folder/: mkdocs.yml
__tests__/fixtures/error-no-nav/docs/: mkdocs.yml
__tests__/fixtures/imported2/ok-with-nav/docs/: index.md  mkdocs.yml
__tests__/fixtures/ok-nav-complex/docs/: mkdocs.yml
__tests__/fixtures/ok-nav-complex/docs/section1/: getting-started.md
__tests__/fixtures/ok-nav-simple/docs/: index.md
__tests__/fixtures/ok-no-nav/docs/: index.md
__tests__/fixtures/ok-with-diff-config-name-and-location/: multirepo.yml
__tests__/fixtures/ok-with-diff-config-name-and-location/docs/: index.md
__tests__/fixtures/ok-with-nav-complex/docs/: index.md
__tests__/fixtures/ok-with-nav-complex/docs/section1/: index.md
__tests__/fixtures/parent-config-test/: mkdocs.yml
__tests__/fixtures/parent-confirm-no-mkdocs.yml/: mkdocs.yml
__tests__/fixtures/parent-multiple-nav-imports/: mkdocs.yml
__tests__/fixtures/parent-ok-with-multilayer-nav/: mkdocs.yml
__tests__/fixtures/parent-ok-with-nav/: mkdocs.yml
__tests__/fixtures/parent-ok-with-nav-github/: mkdocs.yml
__tests__/fixtures/parent-ok-with-nav-github/docs/: index.md
__tests__/fixtures/parent-ok-with-nav-github/site/: 404.html  index.html  sitemap.xml
__tests__/fixtures/parent-ok-with-repos/: mkdocs.yml
__tests__/fixtures/parent-with-imported-images/: mkdocs.yml
__tests__/fixtures/parent-with-indexes-nav/: mkdocs.yml
__tests__/fixtures/parent-with-indexes-nav/docs/: about.md
__tests__/fixtures/parent-with-nav/: mkdocs.yml
__tests__/fixtures/parent-with-nav-repos/: mkdocs.yml
__tests__/fixtures/parent-with-repos/: mkdocs.yml
__tests__/fixtures/parent-with-repos/docs/: index.md
__tests__/fixtures/parents/ok-with-nav/: mkdocs.yml
__tests__/fixtures/parents/ok-with-repos/: mkdocs.yml
examples/mcdocstrings/import-docs-and-code/: mkdocs.yml
mkdocs_multirepo_plugin/: api.py  git_docs.sh  plugin.py  sparse_checkout_docs.sh  structure.py  util.py
mkdocs_multirepo_plugin/scripts/: git_config_files.sh  git_docs.sh  git_docs_old_method.sh  git_serve_files.sh  mv.sh  mv_docs_up.sh  sparse_clone.sh  sparse_clone_old.sh  transform_docs_dir.sh
tests/: function_tests.py  plugin_tests.py  unittests.py  util_tests.py
tests/test_repo/src/: script.py
(+14 files in other folders)
